# pcmtools

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS  ChangeLog-20050419  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  doconf  mkzg.6416.c  mkzg.c  reconf
data/: Makefile.am  Makefile.in
data/CG_6416/: Makefile
data/CG_6416/original/: ascii_0x00.xpm  ascii_0x01.xpm  ascii_0x05.xpm  ascii_0x06.xpm  ascii_0x07.xpm  ascii_0x08.xpm  ascii_0x09.xpm  ascii_0x0a.xpm  ascii_0x0b.xpm  ascii_0x0c.xpm  ascii_0x0d.xpm  ascii_0x12.xpm  ascii_0x14.xpm  ascii_0x16.xpm  ascii_0x18.xpm  ascii_0x19.xpm  ascii_0x1a.xpm  ascii_0x1b.xpm  ascii_0x1c.xpm  ascii_0x1d.xpm  ascii_0x21.xpm  ascii_0x22.xpm  ascii_0x23.xpm  ascii_0x25.xpm  ascii_0x28.xpm  ascii_0x29.xpm  ascii_0x2e.xpm  ascii_0x2f.xpm  ascii_0x30.xpm  ascii_0x32.xpm  ascii_0x35.xpm  ascii_0x36.xpm  ascii_0x37.xpm  ascii_0x38.xpm  ascii_0x39.xpm  ascii_0x3a.xpm  ascii_0x3b.xpm  ascii_0x3c.xpm  ascii_0x3d.xpm  ascii_0x3e.xpm  (+41 more)
data/CG_VID2K/: Makefile
data/CG_VID2K/CAOS_de/: ascii_0x04.xpm  ascii_0x06.xpm  ascii_0x07.xpm  ascii_0x09.xpm  ascii_0x0e.xpm  ascii_0x0f.xpm  ascii_0x13.xpm  ascii_0x18.xpm  ascii_0x19.xpm  ascii_0x1a.xpm  ascii_0x1f.xpm  ascii_0x21.xpm  ascii_0x22.xpm  ascii_0x28.xpm  ascii_0x29.xpm  ascii_0x2a.xpm  ascii_0x35.xpm  ascii_0x3e.xpm  ascii_0x3f.xpm  ascii_0x43.xpm  ascii_0x45.xpm  ascii_0x4a.xpm  ascii_0x4e.xpm  ascii_0x4f.xpm  ascii_0x55.xpm  ascii_0x5d.xpm  ascii_0x64.xpm  ascii_0x65.xpm  ascii_0x69.xpm  ascii_0x6b.xpm  ascii_0x6c.xpm  ascii_0x6f.xpm  ascii_0x72.xpm  ascii_0x77.xpm  ascii_0x7a.xpm  ascii_0x7b.xpm  ascii_0x7c.xpm  ascii_0x7e.xpm  ascii_0x7f.xpm
data/CG_VID2K/CAOS_uk/: ascii_0x01.xpm  ascii_0x0b.xpm  ascii_0x0c.xpm  ascii_0x11.xpm  ascii_0x17.xpm  ascii_0x1b.xpm  ascii_0x1c.xpm  ascii_0x1e.xpm  ascii_0x23.xpm  ascii_0x2b.xpm  ascii_0x2d.xpm  ascii_0x2f.xpm  ascii_0x30.xpm  ascii_0x31.xpm  ascii_0x38.xpm  ascii_0x39.xpm  ascii_0x3c.xpm  ascii_0x3d.xpm  ascii_0x40.xpm  ascii_0x42.xpm  ascii_0x44.xpm  ascii_0x4b.xpm  ascii_0x51.xpm  ascii_0x56.xpm  ascii_0x58.xpm  ascii_0x5c.xpm  ascii_0x60.xpm  ascii_0x62.xpm  ascii_0x66.xpm  ascii_0x68.xpm  ascii_0x6d.xpm  ascii_0x70.xpm  ascii_0x75.xpm  ascii_0x78.xpm  ascii_0x7c.xpm  ascii_0x7d.xpm  ascii_0x7e.xpm
data/CG_VID2K/K8911/: ascii_0x03.xpm  ascii_0x05.xpm  ascii_0x07.xpm  ascii_0x08.xpm  ascii_0x09.xpm  ascii_0x0b.xpm  ascii_0x0c.xpm  ascii_0x0d.xpm  ascii_0x0e.xpm  ascii_0x0f.xpm  ascii_0x13.xpm  ascii_0x14.xpm  ascii_0x15.xpm  ascii_0x16.xpm  ascii_0x18.xpm  ascii_0x19.xpm  ascii_0x1b.xpm  ascii_0x1c.xpm  ascii_0x1d.xpm  ascii_0x1e.xpm  ascii_0x1f.xpm  ascii_0x20.xpm  ascii_0x24.xpm  ascii_0x26.xpm  ascii_0x27.xpm  ascii_0x28.xpm  ascii_0x30.xpm  ascii_0x31.xpm  ascii_0x33.xpm  ascii_0x37.xpm  ascii_0x3b.xpm  ascii_0x3f.xpm  ascii_0x42.xpm  ascii_0x48.xpm  ascii_0x4d.xpm  ascii_0x50.xpm  ascii_0x51.xpm  ascii_0x52.xpm  ascii_0x57.xpm  ascii_0x5b.xpm  (+13 more)
data/CG_VID2K/SLZ_I/: ascii_0x00.xpm  ascii_0x02.xpm  ascii_0x03.xpm  ascii_0x08.xpm  ascii_0x0a.xpm  ascii_0x0c.xpm  ascii_0x0e.xpm  ascii_0x11.xpm  ascii_0x13.xpm  ascii_0x17.xpm  ascii_0x19.xpm  ascii_0x1a.xpm  ascii_0x1e.xpm  ascii_0x21.xpm  ascii_0x22.xpm  ascii_0x24.xpm  ascii_0x27.xpm  ascii_0x28.xpm  ascii_0x29.xpm  ascii_0x2a.xpm  ascii_0x2b.xpm  ascii_0x2c.xpm  ascii_0x2d.xpm  ascii_0x2e.xpm  ascii_0x2f.xpm  ascii_0x30.xpm  ascii_0x32.xpm  ascii_0x36.xpm  ascii_0x3b.xpm  ascii_0x3d.xpm  ascii_0x3f.xpm  ascii_0x40.xpm  ascii_0x41.xpm  ascii_0x42.xpm  ascii_0x45.xpm  ascii_0x46.xpm  ascii_0x48.xpm  ascii_0x4b.xpm  ascii_0x4e.xpm  ascii_0x51.xpm  (+25 more)
data/CG_VID2K/original/: ascii_0x00.xpm  ascii_0x01.xpm  ascii_0x02.xpm  ascii_0x03.xpm  ascii_0x04.xpm  ascii_0x08.xpm  ascii_0x09.xpm  ascii_0x0d.xpm  ascii_0x0f.xpm  ascii_0x10.xpm  ascii_0x12.xpm  ascii_0x13.xpm  ascii_0x14.xpm  ascii_0x15.xpm  ascii_0x16.xpm  ascii_0x17.xpm  ascii_0x18.xpm  ascii_0x19.xpm  ascii_0x1b.xpm  ascii_0x1e.xpm  ascii_0x21.xpm  ascii_0x2a.xpm  ascii_0x2e.xpm  ascii_0x34.xpm  ascii_0x36.xpm  ascii_0x38.xpm  ascii_0x3c.xpm  ascii_0x3d.xpm  ascii_0x43.xpm  ascii_0x46.xpm  ascii_0x4a.xpm  ascii_0x4b.xpm  ascii_0x4c.xpm  ascii_0x53.xpm  ascii_0x54.xpm  ascii_0x56.xpm  ascii_0x5c.xpm  ascii_0x5d.xpm  ascii_0x61.xpm  ascii_0x67.xpm  (+7 more)
data/ZG_6416/: Makefile
data/ZG_6416/original/: ascii_0x02.xpm  ascii_0x03.xpm  ascii_0x04.xpm  ascii_0x0e.xpm  ascii_0x0f.xpm  ascii_0x10.xpm  ascii_0x11.xpm  ascii_0x13.xpm  ascii_0x15.xpm  ascii_0x17.xpm  ascii_0x1e.xpm  ascii_0x1f.xpm  ascii_0x20.xpm  ascii_0x24.xpm  ascii_0x26.xpm  ascii_0x27.xpm  ascii_0x2a.xpm  ascii_0x2b.xpm  ascii_0x2c.xpm  ascii_0x2d.xpm  ascii_0x31.xpm  ascii_0x33.xpm  ascii_0x34.xpm  ascii_0x42.xpm  ascii_0x47.xpm  ascii_0x48.xpm  ascii_0x4a.xpm  ascii_0x4b.xpm  ascii_0x4f.xpm  ascii_0x50.xpm  ascii_0x52.xpm  ascii_0x53.xpm  ascii_0x54.xpm  ascii_0x5e.xpm  ascii_0x62.xpm  ascii_0x64.xpm  ascii_0x66.xpm  ascii_0x68.xpm  ascii_0x69.xpm  ascii_0x6b.xpm  (+7 more)
data/ZG_VID2K/: Makefile
data/ZG_VID2K/CAOS_de/: ascii_0x02.xpm  ascii_0x03.xpm  ascii_0x05.xpm  ascii_0x0a.xpm  ascii_0x0d.xpm  ascii_0x10.xpm  ascii_0x12.xpm  ascii_0x14.xpm  ascii_0x15.xpm  ascii_0x1d.xpm  ascii_0x26.xpm  ascii_0x33.xpm  ascii_0x34.xpm  ascii_0x37.xpm  ascii_0x3a.xpm  ascii_0x3b.xpm  ascii_0x46.xpm  ascii_0x47.xpm  ascii_0x49.xpm  ascii_0x4c.xpm  ascii_0x4d.xpm  ascii_0x52.xpm  ascii_0x57.xpm  ascii_0x5b.xpm  ascii_0x5c.xpm  ascii_0x60.xpm  ascii_0x6e.xpm  ascii_0x74.xpm  ascii_0x7d.xpm
data/ZG_VID2K/CAOS_uk/: ascii_0x00.xpm  ascii_0x08.xpm  ascii_0x16.xpm  ascii_0x24.xpm  ascii_0x25.xpm  ascii_0x27.xpm  ascii_0x2c.xpm  ascii_0x2e.xpm  ascii_0x32.xpm  ascii_0x36.xpm  ascii_0x41.xpm  ascii_0x48.xpm  ascii_0x50.xpm  ascii_0x53.xpm  (+16 more)
man/: Makefile.am  mkcg.6416.x  mkcg.vid2k.x
src/: Makefile.am  mkcg.6416.c  mkcg.c  mkcg.vid2k.c  mkcg_cli.c  mkcg_cmd_6416.c  mkcg_cmd_vid2k.c  mkcg_isvalidch.c  mkcg_out_banner.c  mkcg_out_xpm.c  mkcg_out_xxd.c  mkzg.6416.c  mkzg.vid2k.c  pcmtools.h
src/smoke/: Makefile.am
(+171 files in other folders)
